# Kid3d

./: .gitignore  CMakeLists.txt  README.md  demo  example.cpp
OpenGL/: CMakeLists.txt  Makefile  a.c
